@@ -491,7 +491,8 @@ static Ecore_Evas_Engine_Func _ecore_buffer_engine_func =
      NULL,
      NULL, //transparent
 
-     NULL // render
+     NULL, // render
+     NULL  // screen_geometry_get
 };
 #endif
 
