@@ -333,7 +333,8 @@ static Ecore_Evas_Engine_Func _ecore_sdl_engine_func =
    NULL,
    NULL, //transparent
 
-     NULL // render
+   NULL, // render
+   NULL screen_geometry_get
 };
 
 static Ecore_Evas*
